--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </script>
   </head>
   <body>
-    <p>Hi App</p>
+    <div id="app"></div>
+    <script src="/index.js"></script>
   </body>
 </html>
