--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <style>
+      .dark {
+        color: white;
+        background: black;
+        height: 300px;
+        padding: 1em;
+        font-weight: 700;
+      }
+      .dancefloor {
+        background: lightgray;
+      }
     </style>
 
     <script>
