balls, floor, text

--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
         color: white;
         background: black;
         height: 300px;
+        width: 500px;
         padding: 1em;
         font-weight: 700;
       }
       .dancefloor {
         background: lightgray;
+      }
+      .dancetext {
+        fill: white;
+        stroke: red;
+        font-size: 2.5em;
       }
     </style>
 
